--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "947f5dc6",
+   "id": "eeea0609",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6a77a53f",
+   "id": "8d1ad081",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "570f2e8c",
+   "id": "25e98261",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "646e0ccc",
+   "id": "5db1adc0",
    "metadata": {},
    "outputs": [
     {
@@ -688,9 +688,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff16936c",
+   "metadata": {},
+   "source": [
+    "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff9e455",
+   "id": "3888e18d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENter the first string: this is python programming lab\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_matching_characters(str1, str2):\n",
+    "    count = 0\n",
+    "    # Loop through characters of the first string\n",
+    "    for char in str1:\n",
+    "        if char in str2:\n",
+    "            count += 1\n",
+    "            str2 = str2.replace(char, '', 1)  # Remove the matched character from the second string\n",
+    "    return count\n",
+    "\n",
+    "# Driver code\n",
+    "str1 = input(\"ENter the first string: \")\n",
+    "str2 = input(\"ENter the second string: \")\n",
+    "print(\"Total number of matched characters are: \", count_matching_characters(str1, str2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25d3f276",
    "metadata": {},
    "outputs": [],
    "source": []
