--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeea0609",
+   "id": "599be400",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8d1ad081",
+   "id": "e6911f87",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25e98261",
+   "id": "bbf1e9ce",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5db1adc0",
+   "id": "559f3aa0",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff16936c",
+   "id": "3ad424e6",
    "metadata": {},
    "source": [
     "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
@@ -697,15 +697,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3888e18d",
+   "execution_count": 11,
+   "id": "d9ee29ca",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ENter the first string: this is python programming lab\n"
+      "ENter the first string: this is python programming lab\n",
+      "ENter the second string: learn python codeing\n",
+      "Total number of matched characters are:  15\n"
      ]
     }
    ],
@@ -726,12 +728,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97460ef4",
+   "metadata": {},
+   "source": [
+    "#### 35. Write a Python function that takes a string as an input from the user and displays its reverse."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d3f276",
+   "id": "dbbe6989",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reverse_string(s):\n",
+    "    return s[::-1]\n",
+    "\n",
+    "# Driver codestr \n",
+    "str = input(Please ee)"
+   ]
   }
  ],
  "metadata": {
