--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "599be400",
+   "id": "5346072c",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e6911f87",
+   "id": "c1836ee9",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbf1e9ce",
+   "id": "0ae60b11",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "559f3aa0",
+   "id": "7dc3b3bb",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ad424e6",
+   "id": "21eaeb84",
    "metadata": {},
    "source": [
     "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d9ee29ca",
+   "id": "873d5ca1",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97460ef4",
+   "id": "bee7075d",
    "metadata": {},
    "source": [
     "#### 35. Write a Python function that takes a string as an input from the user and displays its reverse."
@@ -737,16 +737,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dbbe6989",
+   "execution_count": 12,
+   "id": "77169055",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter ther string: this is a Lab\n",
+      "reversed string is : baL a si siht\n"
+     ]
+    }
+   ],
    "source": [
     "def reverse_string(s):\n",
     "    return s[::-1]\n",
     "\n",
     "# Driver codestr \n",
-    "str = input(Please ee)"
+    "str = input(\"Please enter ther string: \" )\n",
+    "print(\"reversed string is :\", reverse_string(str))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74ade61f",
+   "metadata": {},
+   "source": [
+    "#### 36. Write a Python function that takes a string as an input from the user and determines whether it is **palindrome** or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bfe733b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the string: \n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'lower'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Driver code\u001b[39;00m\n\u001b[0;32m      9\u001b[0m str1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the string: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m test \u001b[38;5;241m=\u001b[39m is_palindrome(str1)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m test \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntered tring is a Palindrome sting.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[16], line 3\u001b[0m, in \u001b[0;36mis_palindrome\u001b[1;34m(s)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mis_palindrome\u001b[39m(s):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;66;03m# Remove spaces and convert to lowercase for case-insensitive comparison\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;66;03m# Compare the string with its reverse\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m s \u001b[38;5;241m==\u001b[39m s[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'lower'"
+     ]
+    }
+   ],
+   "source": [
+    "def is_palindrome(s):\n",
+    "    # Remove spaces and convert to lowercase for case-insensitive comparison\n",
+    "    s = s.lower()\n",
+    "    \n",
+    "    # Compare the string with its reverse\n",
+    "    return s == s[::-1]\n",
+    "\n",
+    "# Driver code\n",
+    "str1 = print(\"Enter the string: \")\n",
+    "test = is_palindrome(str1)\n",
+    "if test == True:\n",
+    "    print(\"Entered tring is a Palindrome sting.\")\n",
+    "else:\n",
+    "    print(\"Entered tring is not a Palindrome sting.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4bfd0be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saket"
    ]
   }
  ],
