--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5346072c",
+   "id": "7d30fa3f",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c1836ee9",
+   "id": "64852827",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ae60b11",
+   "id": "7818c295",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7dc3b3bb",
+   "id": "421d9287",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21eaeb84",
+   "id": "9ce66c40",
    "metadata": {},
    "source": [
     "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "873d5ca1",
+   "id": "6df6e180",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bee7075d",
+   "id": "41e457d5",
    "metadata": {},
    "source": [
     "#### 35. Write a Python function that takes a string as an input from the user and displays its reverse."
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "77169055",
+   "id": "e5cb2d59",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74ade61f",
+   "id": "8850ea7d",
    "metadata": {},
    "source": [
     "#### 36. Write a Python function that takes a string as an input from the user and determines whether it is **palindrome** or not."
@@ -769,40 +769,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bfe733b2",
+   "execution_count": 19,
+   "id": "14d94a4c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the string: \n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'lower'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m# Driver code\u001b[39;00m\n\u001b[0;32m      9\u001b[0m str1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter the string: \u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m test \u001b[38;5;241m=\u001b[39m is_palindrome(str1)\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m test \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEntered tring is a Palindrome sting.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[1;32mIn[16], line 3\u001b[0m, in \u001b[0;36mis_palindrome\u001b[1;34m(s)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mis_palindrome\u001b[39m(s):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;66;03m# Remove spaces and convert to lowercase for case-insensitive comparison\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mlower()\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;66;03m# Compare the string with its reverse\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m s \u001b[38;5;241m==\u001b[39m s[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'lower'"
+      "Enter the string: this is si siht\n",
+      "Entered tring is a Palindrome sting.\n"
      ]
     }
    ],
    "source": [
     "def is_palindrome(s):\n",
     "    # Remove spaces and convert to lowercase for case-insensitive comparison\n",
-    "    s = s.lower()\n",
+    "    s = s.replace(\" \", \"\".lower())\n",
     "    \n",
     "    # Compare the string with its reverse\n",
     "    return s == s[::-1]\n",
     "\n",
     "# Driver code\n",
-    "str1 = print(\"Enter the string: \")\n",
+    "str1 = input(\"Enter the string: \")\n",
     "test = is_palindrome(str1)\n",
     "if test == True:\n",
     "    print(\"Entered tring is a Palindrome sting.\")\n",
@@ -811,13 +800,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0699ba66",
+   "metadata": {},
+   "source": [
+    "#### 37. Write a Python function to calculate the sum of two compatible matrices."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4bfd0be",
+   "id": "b2b0e7d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "saket"
+    "def add_matrices(matrix1, matrix2):\n",
+    "    # Check if the matrices have the same dimensions\n",
+    "    if len(matrix1) != len(matrix2) or len(matrix1[0]) != len(matrix2[0]):\n",
+    "        raise ValueError(\"Matrices are not of the same size\")\n",
+    "    \n",
+    "    # Initialize the result matrix with zero values\n",
+    "    result = [[0 for _ in range(len(matrix1[0]))] for _ in range(len(matrix1))]\n",
+    "    \n",
+    "    # Add corresponding elements\n",
+    "    for i in range(len(matrix1)):\n",
+    "        for j in range(len(matrix1[0])):\n",
+    "            result[i][j] = matrix1[i][j] + matrix2[i][j]\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "\n"
    ]
   }
  ],
