--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d30fa3f",
+   "id": "33fa4895",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "64852827",
+   "id": "720a7344",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7818c295",
+   "id": "a595b666",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "421d9287",
+   "id": "e28e6bea",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ce66c40",
+   "id": "8e635e3c",
    "metadata": {},
    "source": [
     "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6df6e180",
+   "id": "77ce582a",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41e457d5",
+   "id": "6bac769d",
    "metadata": {},
    "source": [
     "#### 35. Write a Python function that takes a string as an input from the user and displays its reverse."
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e5cb2d59",
+   "id": "736663ee",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8850ea7d",
+   "id": "bdbf1d11",
    "metadata": {},
    "source": [
     "#### 36. Write a Python function that takes a string as an input from the user and determines whether it is **palindrome** or not."
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "14d94a4c",
+   "id": "2dbd55c1",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0699ba66",
+   "id": "cc7afdab",
    "metadata": {},
    "source": [
     "#### 37. Write a Python function to calculate the sum of two compatible matrices."
@@ -809,10 +809,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b2b0e7d2",
+   "execution_count": 21,
+   "id": "083206a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8, 10, 12], [14, 16, 18]]\n"
+     ]
+    }
+   ],
    "source": [
     "def add_matrices(matrix1, matrix2):\n",
     "    # Check if the matrices have the same dimensions\n",
@@ -831,8 +839,27 @@
     "\n",
     "# Driver code\n",
     "\n",
-    "\n"
+    "matrix1 = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "]\n",
+    "\n",
+    "matrix2 = [\n",
+    "    [7, 8, 9],\n",
+    "    [10, 11, 12],\n",
+    "]\n",
+    "\n",
+    "result = add_matrices(matrix1, matrix2)\n",
+    "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8afb5c12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
