--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33fa4895",
+   "id": "7ec2706f",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "720a7344",
+   "id": "7f753c7b",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a595b666",
+   "id": "2e1efd89",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e28e6bea",
+   "id": "4e67141c",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e635e3c",
+   "id": "2ac08e25",
    "metadata": {},
    "source": [
     "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "77ce582a",
+   "id": "dd833103",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bac769d",
+   "id": "9f612b0c",
    "metadata": {},
    "source": [
     "#### 35. Write a Python function that takes a string as an input from the user and displays its reverse."
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "736663ee",
+   "id": "27d47901",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdbf1d11",
+   "id": "628f7260",
    "metadata": {},
    "source": [
     "#### 36. Write a Python function that takes a string as an input from the user and determines whether it is **palindrome** or not."
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2dbd55c1",
+   "id": "39615be6",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7afdab",
+   "id": "6647d9d5",
    "metadata": {},
    "source": [
     "#### 37. Write a Python function to calculate the sum of two compatible matrices."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "083206a6",
+   "id": "25e0b294",
    "metadata": {},
    "outputs": [
     {
@@ -854,9 +854,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e63e773d",
+   "metadata": {},
+   "source": [
+    "#### 38. Write a Python function to calculate the product of two compatible matrices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4d009ddf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[8, 10, 12], [14, 16, 18]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply_matrices(matrix1, matrix2):\n",
+    "    # Check if the matrices can be multiplied (number of columns of matrix1 should equal number of rows of matrix2)\n",
+    "    if len(matrix1[0]) != len(matrix2):\n",
+    "        raise ValueError(\"Matrices are not compatible for multiplication\")\n",
+    "    \n",
+    "    # Initialize the result matrix with zero values\n",
+    "    result = [[0 for _ in range(len(matrix2[0]))] for _ in range(len(matrix1))]\n",
+    "    \n",
+    "    # Multiply the matrices\n",
+    "    for i in range(len(matrix1)):\n",
+    "        for j in range(len(matrix2[0])):\n",
+    "            for k in range(len(matrix2)):\n",
+    "                result[i][j] += matrix1[i][k] * matrix2[k][j]\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ba789c",
+   "metadata": {},
+   "source": [
+    "#### Write a function that takes n as an input and creates a list of n lists such that ith list contains first five multiples of i."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3cc4f72d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 3\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[2, 4, 6, 8, 10]\n",
+      "[3, 6, 9, 12, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_multiples_list(n):\n",
+    "    result = []\n",
+    "    for i in range(1, n + 1):\n",
+    "        result.append([i * j for j in range(1, 6)])\n",
+    "    return result\n",
+    "\n",
+    "# Driver code\n",
+    "\n",
+    "n = int(input(\"Enter a number: \"))\n",
+    "multiples_list = create_multiples_list(n)\n",
+    "\n",
+    "for lst in multiples_list:\n",
+    "    print(lst)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8afb5c12",
+   "id": "7ae7b18f",
    "metadata": {},
    "outputs": [],
    "source": []
