--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ec2706f",
+   "id": "f9f2ba0b",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7f753c7b",
+   "id": "2d4f916d",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e1efd89",
+   "id": "c99f9dc1",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4e67141c",
+   "id": "581decd8",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ac08e25",
+   "id": "5b5edc13",
    "metadata": {},
    "source": [
     "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dd833103",
+   "id": "1b24a8be",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f612b0c",
+   "id": "959ebd5e",
    "metadata": {},
    "source": [
     "#### 35. Write a Python function that takes a string as an input from the user and displays its reverse."
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "27d47901",
+   "id": "8e813d30",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628f7260",
+   "id": "adcdb0f6",
    "metadata": {},
    "source": [
     "#### 36. Write a Python function that takes a string as an input from the user and determines whether it is **palindrome** or not."
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "39615be6",
+   "id": "50aaebf8",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6647d9d5",
+   "id": "35b9c9b0",
    "metadata": {},
    "source": [
     "#### 37. Write a Python function to calculate the sum of two compatible matrices."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "25e0b294",
+   "id": "cf547e8d",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63e773d",
+   "id": "1bc65a1e",
    "metadata": {},
    "source": [
     "#### 38. Write a Python function to calculate the product of two compatible matrices."
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4d009ddf",
+   "id": "788c9896",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22ba789c",
+   "id": "a8c118a5",
    "metadata": {},
    "source": [
     "#### Write a function that takes n as an input and creates a list of n lists such that ith list contains first five multiples of i."
@@ -907,18 +907,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "3cc4f72d",
+   "execution_count": 25,
+   "id": "7c80c5e4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a number: 3\n",
+      "Enter a number: 10\n",
       "[1, 2, 3, 4, 5]\n",
       "[2, 4, 6, 8, 10]\n",
-      "[3, 6, 9, 12, 15]\n"
+      "[3, 6, 9, 12, 15]\n",
+      "[4, 8, 12, 16, 20]\n",
+      "[5, 10, 15, 20, 25]\n",
+      "[6, 12, 18, 24, 30]\n",
+      "[7, 14, 21, 28, 35]\n",
+      "[8, 16, 24, 32, 40]\n",
+      "[9, 18, 27, 36, 45]\n",
+      "[10, 20, 30, 40, 50]\n"
      ]
     }
    ],
@@ -939,12 +946,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a703867",
+   "metadata": {},
+   "source": [
+    "#### 40. Write a function that reads a file file1 and displays the number of words and the number of vowels in the file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ae7b18f",
+   "id": "25bc83f6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def count_words_and_vowels(filename):\n",
+    "    vowels = \"aeiouAEIOU\"\n",
+    "    word_count = 0\n",
+    "    vowel_count = 0\n",
+    "\n",
+    "    try:\n",
+    "        with open(filename, 'r') as file:\n",
+    "            # Read the file content\n",
+    "            content = file.read()\n",
+    "\n",
+    "            # Count words by splitting the content by spaces\n",
+    "            words = content.split()\n",
+    "            word_count = len(words)\n",
+    "\n",
+    "            # Count vowels by iterating through each character in the content\n",
+    "            for char in content:\n",
+    "                if char in vowels:\n",
+    "                    vowel_count += 1\n",
+    "\n",
+    "        print(f\"Number of words: {word_count}\")\n",
+    "        print(f\"Number of vowels: {vowel_count}\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"The file {filename} was not found.\")\n",
+    "    return\n",
+    "\n",
+    "# Drive"
+   ]
   }
  ],
  "metadata": {
