--- a/GITAM-Lab/All_Programs_41_to_60.ipynb
+++ b/GITAM-Lab/All_Programs_41_to_60.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01f84205",
+   "id": "e126fbaa",
    "metadata": {},
    "source": [
     "#### 41. Write a iterative program  to compute the factorial of  a given number"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83c35c3b",
+   "id": "9660802b",
    "metadata": {},
    "source": [
     "##### 1st Method"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4c91c129",
+   "id": "0bf33883",
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f829c7d",
+   "id": "1d1af91b",
    "metadata": {},
    "source": [
     "###### Method 2"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "2bc6e064",
+   "id": "3eb20415",
    "metadata": {},
    "outputs": [
     {
@@ -88,9 +88,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53f6ad63",
+   "metadata": {},
+   "source": [
+    "#### 43. Write a recurssive program to compute the factorial of a given number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1efad9d8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number5\n",
+      "The factorial of the given number  5 is 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_factorial (number):\n",
+    "    fact = 1\n",
+    "    if  number < 0:\n",
+    "        return \"None\"\n",
+    "    elif number  == 0 or number  == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return number * compute_factorial(number -1)   # Recurrssion\n",
+    "    \n",
+    "# Driver code\n",
+    "number = int(input(\"Enter the number\"))\n",
+    "print(\"The factorial of the given number  {} is {}\".format(number, compute_factorial (number) ))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cab0418f",
+   "id": "51c6b486",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -98,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e915e19",
+   "id": "08a1297d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,7 +144,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ac6ebcf",
+   "id": "87ddf99f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed4b318b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c671bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c30b84b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f41513ed",
    "metadata": {},
    "outputs": [],
    "source": []
