dictionary file added

--- a/GITAM-Lab/All_Programs_21_to_40.ipynb
+++ b/GITAM-Lab/All_Programs_21_to_40.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f2ba0b",
+   "id": "93b5a3bc",
    "metadata": {},
    "source": [
     "#### 32. Write a function that takes two numbers as input parameters and returns their highest common factor. ####"
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2d4f916d",
+   "id": "43670327",
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c99f9dc1",
+   "id": "f3fc6bc6",
    "metadata": {},
    "source": [
     "#### 33. Write a function that takes a number as an input and determine whether it is prime or not."
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "581decd8",
+   "id": "9758d1e7",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b5edc13",
+   "id": "d2e97673",
    "metadata": {},
    "source": [
     "#### 34. Write a Python function that takes two strings as an input from the user and counts the number of matching characters in the given pair of strings."
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1b24a8be",
+   "id": "f1f1e895",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "959ebd5e",
+   "id": "e8f7da64",
    "metadata": {},
    "source": [
     "#### 35. Write a Python function that takes a string as an input from the user and displays its reverse."
@@ -738,7 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8e813d30",
+   "id": "3729bfd6",
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adcdb0f6",
+   "id": "8f5a3eba",
    "metadata": {},
    "source": [
     "#### 36. Write a Python function that takes a string as an input from the user and determines whether it is **palindrome** or not."
@@ -770,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "50aaebf8",
+   "id": "67ddad2a",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b9c9b0",
+   "id": "c3fb66d7",
    "metadata": {},
    "source": [
     "#### 37. Write a Python function to calculate the sum of two compatible matrices."
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cf547e8d",
+   "id": "9dc036dc",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc65a1e",
+   "id": "538bfcbf",
    "metadata": {},
    "source": [
     "#### 38. Write a Python function to calculate the product of two compatible matrices."
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "788c9896",
+   "id": "47652e56",
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c118a5",
+   "id": "d29cea3e",
    "metadata": {},
    "source": [
     "#### Write a function that takes n as an input and creates a list of n lists such that ith list contains first five multiples of i."
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7c80c5e4",
+   "id": "fd75deb0",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a703867",
+   "id": "c7593cf8",
    "metadata": {},
    "source": [
     "#### 40. Write a function that reads a file file1 and displays the number of words and the number of vowels in the file."
@@ -955,10 +955,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "25bc83f6",
+   "execution_count": 26,
+   "id": "bdc39f0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of words: 7\n",
+      "Number of vowels: 10\n"
+     ]
+    }
+   ],
    "source": [
     "def count_words_and_vowels(filename):\n",
     "    vowels = \"aeiouAEIOU\"\n",
@@ -985,8 +994,18 @@
     "        print(f\"The file {filename} was not found.\")\n",
     "    return\n",
     "\n",
-    "# Drive"
+    "# Driver code\n",
+    "\n",
+    "count_words_and_vowels('file1.txt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d849936",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
