--- a/GITAM-Lab/Dictionary_Data_Type.ipynb
+++ b/GITAM-Lab/Dictionary_Data_Type.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "168890d1",
+   "id": "77825aea",
    "metadata": {},
    "source": [
     "## This file deals with the dictionary datatype and its associated methods."
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39899721",
+   "id": "f9315049",
    "metadata": {},
    "source": [
     "#### Since Python 3.7 dictioary data-type is an oordered datatype, so that\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca658621",
+   "id": "e8f0b44f",
    "metadata": {},
    "source": [
     "##### How to define a dictionary data\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3fe88eb7",
+   "id": "68cec273",
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62a96bf6",
+   "id": "b15a8bb4",
    "metadata": {},
    "source": [
     "###### Here, name, course, Semester amd studensts are keys\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be8d4837",
+   "id": "b80d9dea",
    "metadata": {},
    "source": [
     "##### We can don any change in dictionary values like,\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a374a28c",
+   "id": "49f27768",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "231c3e95",
+   "id": "d77b53a1",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "f1c54687",
+   "id": "fc2b0947",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fa042778",
+   "id": "6ba7c667",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "79e9f4a7",
+   "id": "ebe48099",
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7f17bfcd",
+   "id": "9ae659b8",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "00890032",
+   "id": "d6f4d10a",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aafe38f",
+   "id": "702ab31f",
    "metadata": {},
    "source": [
     "##### There are four types of collections in pythoon\n",
@@ -235,8 +235,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "id": "c5ebf2c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Chouodhary\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get a specfic  value\n",
+    "if \"name\" in my_dict.keys():\n",
+    "    print(my_dict.get(\"name\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e48ec607",
+   "id": "ff6d05ab",
    "metadata": {},
    "outputs": [],
    "source": []
